--- a/arrow-avro/Cargo.toml
+++ b/arrow-avro/Cargo.toml
@@ -34,7 +34,7 @@ path = "src/lib.rs"
 bench = false
 
 [features]
-default = ["deflate", "snappy", "zstd"]
+default = ["deflate", "snappy", "zstd", "bzip2", "xz"]
 deflate = ["flate2"]
 snappy = ["snap", "crc"]
 
@@ -42,14 +42,19 @@ snappy = ["snap", "crc"]
 arrow-schema = { workspace = true }
 arrow-buffer = { workspace = true }
 arrow-array = { workspace = true }
+arrow-data = { workspace = true }
 serde_json = { version = "1.0", default-features = false, features = ["std"] }
 serde = { version = "1.0.188", features = ["derive"] }
 flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }
 snap = { version = "1.0", default-features = false, optional = true }
 zstd = { version = "0.13", default-features = false, optional = true }
+bzip2 = { version = "0.4.4", default-features = false, optional = true }
+xz = { version = "0.1.0", default-features = false, optional = true }
 crc = { version = "3.0", optional = true }
 
 
 [dev-dependencies]
-rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
-
+bytes = "1.4"
+futures = "0.3"
+tokio = { version = "1.27", default-features = false, features = ["io-util", "macros", "rt-multi-thread"] }
+rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng"] }
